# 11parts_CPP

./: CMakeLists.txt  README.md  auth.cxx  auth.h  basic.h  buffer.h  custom.h  engine.cxx  engine.h  fifo.cxx  fifo.h  global.cxx  global.h  install_lib.sh  ipc_socket.cxx  ipc_socket.h  memadmin.cxx  memadmin.h  node.cxx  node.h  node_req.cxx  node_req.h  print.cxx  print.h  restart_cnoda_ssh.sh  secure_access.cxx  settings_adm.cxx  settings_adm.h  thread.cxx  thread.h  thread_basic.cxx  types.h  update_all.sh
algo/: MD5.cxx  MD5.h  aes.cxx  aes.h  base64.cxx  base64.h  crc.cxx  crc.h  sha256.h
gzip/: compress.hpp  config.hpp  decompress.hpp  utils.hpp  version.hpp
lib/: 11p_bin.cxx  11p_bin.h  11p_files.cxx  11p_files.h  11p_json.cxx  11p_json.h  11p_process.cxx  11p_process.h  11p_string.cxx  11p_string.h  11p_string_net.cxx  11p_string_net.h  11p_text_convert.cxx  11p_text_convert.h  11p_time.cxx  11p_time.h
lib/mustache/: mustache.hpp
logger/: algo_biphasic_offset.cxx  algo_biphasic_offset.h  algo_sqlite.cxx  algo_sqlite.h  algo_sqlite_cli.cxx  algo_sqlite_cli.h  dnk_biphasic_offset.cxx  dnk_biphasic_offset.h  dnk_biphasic_offset_cli.cxx  dnk_biphasic_offset_cli.h  safe_logger.cxx  safe_logger.h  safe_logger_client.cxx  safe_logger_client.h  safe_logger_srvalgo.h
loop/: factory_reset.cxx  factory_reset.h  guard_loop.cxx  guard_loop.h  jnoda_adapter.cxx  jnoda_adapter.h  mbusLoopChannel.cxx  mbus_loop.cxx  mbus_loop.h  mq_collector.cxx  mq_collector.h  reporter_admin.cxx  reporter_admin.h  safe_storage.cxx  safe_storage.h  update_admin.cxx  update_admin.h  watchdog_admin.cxx  watchdog_admin.h  websrv_adapter.cxx  websrv_adapter.h
minisw/: evedt_evnode.cxx  factory.cxx  gprivate.cxx  gset.cxx  imcheck.cxx  imcheck.h  minisw.cxx  minisw.h  safe_logger.cxx  setclean.cxx  snmp.cxx  sset.cxx  usb_reset.cxx  watchdog_stub.cxx
minisw/necron/: cnodakg.cxx  cnodakg.h  necron.cxx  necron.h
minisw/service/: svc.cxx  svc.h  syslib.cxx  syslib.h
periphery/: abstraction.cxx  abstraction.h  abstraction_mc.cxx  abstraction_sast.cxx  adapter.cxx  adapter.h  gpio.cxx  gpio.h  input_event.h  skey.cxx  skey.h  skeyV2.cxx  skeyV2.h  tty.cxx  tty.h  watchdog.cxx  watchdog.h
proto/: custom_proto.h  ethernet_multicast.cxx  ethernet_multicast.h  json_proto.cxx  json_proto.h  modbusInterThread.h  modbuscpp.cxx  modbuscpp.h  mqtt.cxx  mqtt.h  proto_header.h  redis.h  snmp.h  snmp_adm.cxx
proto/ftp/: CurlHandle.cpp  CurlHandle.h  FTPClient.cpp  FTPClient.h
proto/ini/: INIReader.h
proto/ssdpd/: md5.c  pidfile.c  ssdp.h  ssdpd.c  web.c
toolchain/: dockbuild.sh
toolchain/example/archlinux/: toolchain-armv7.cmake
update/: update.cxx  update.h
